Bug#50296 Slave reconnects earlier than the prescribed slave_net_timeout value

Fixed failed assert on 64 bit platforms, introduced by the previous fix.

mysqld: sys_vars.h:125: Assertion `size == sizeof(T)' failed.